--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container header-container">
             <div class="logo">
                 <!-- Replace with your logo image path -->
-                <img src="C:\Site\Gemini_Generated_Image_4wksp14wksp14wks.png" alt="Rento Logo">
+                <img src="Gemini_Generated_Image_4wksp14wksp14wks.png" alt="Rento Logo">
             </div>
             <nav>
                 <ul>
